--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   flutter_layout_grid: ^2.0.4
   expandable_datatable: ^0.0.7
   pluto_grid: ^7.0.2
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  flutter_dropdown_alert: ^1.0.7
+  image_picker_web: ^3.1.1
+  firebase_storage: ^11.2.5
 
 dev_dependencies:
   flutter_test:
