--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_dropdown_alert: ^1.0.7
   image_picker_web: ^3.1.1
   firebase_storage: ^11.2.5
+  dio: ^5.3.2
 
 
 dev_dependencies:
