--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   dio: ^5.3.2
   provider: ^6.0.5
   crypto: ^3.0.3
+  context_menus: ^1.0.2
+  universal_html: ^2.2.4
 
 
 dev_dependencies:
