--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   crypto: ^3.0.3
   context_menus: ^1.0.2
   universal_html: ^2.2.4
+  pluto_grid_export: ^1.0.6
+  file_saver: ^0.2.8
+
 
 
 dev_dependencies:
